--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "graphql": "^14.0.2",
+    "graphql-upload": "^17.0.0",
     "helmet": "^3.14.0",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.22.2",
@@ -35,6 +36,7 @@
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
     "subscriptions-transport-ws": "^0.9.15",
+    "uuid": "^11.1.0",
     "win-node-env": "^0.6.1"
   },
   "devDependencies": {
