--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "apollo-server-env": "2.4.4",
-    "apollo-server-express": "2.4.8",
+    "apollo-server-express": "^2.15.0",
     "aws-sdk": "^2.757.0",
     "axios": "^0.18.1",
     "babel-cli": "^6.26.0",
